--- a/Calculator/public_html/style.css
+++ b/Calculator/public_html/style.css
@@ -10,7 +10,7 @@ Programmer: Craig Parker
 #calculator{
   background-color: lightskyblue;
   width: 300px;
-  height: 360px;
+  height: 425px;
   margin-right: auto;
   margin-left: auto;
     
@@ -24,6 +24,9 @@ Programmer: Craig Parker
     width: 212px;
     text-align: right;
     font-size: 35px;
+}
+#clear{
+    background-color:tomato; 
 }
 #container1{
     width: 225px;
@@ -40,12 +43,18 @@ Programmer: Craig Parker
 }
 #enter{
     height: 145px;
-    width: 52px;   
+    width: 52px; 
+    padding: 0px;
 }
 .operations{
   display: inline-block;  
   padding: 20px;
   width: 51px;    
+}
+.calcUtility{
+  display: inline-block;  
+  height: 59px;
+  width: 51px;
 }
 #zeroButton{
  padding: 20px;
